2-20일 중간저장

--- a/지원자 목록1.html
+++ b/지원자 목록1.html
@@ -54,9 +54,11 @@
     </nav>
     <!-- 헤더 경계선 -->
     <div class="container my-3">
-        <h2 class="container">빙그레 상반기 채용 연계형 인턴쉽 지원자 목록</h2>
-        <hr>
-        <div class="container">
+        <div class="m-3">
+            <h2 class="container">빙그레 상반기 채용 연계형 인턴쉽 지원자 목록</h2>
+            <hr>
+        </div>
+        <div class="container m-3">
             <table class="table table-striped">
                 <thead>
                     <tr>
