--- a/지원자 상세페이지.html
+++ b/지원자 상세페이지.html
@@ -56,8 +56,8 @@
     <div class="container my-3">
         <div class="container mt-5">
             <div class="row">
-                <div class="col-sm-4 p-3">
-                    <div class="text-bg-light border border-subtle m-3 rounded-1">
+                <div class=" col-sm-4 p-3">
+                    <div class="my-border-color-default m-3 rounded-1" style="height: 100%;">
                         <div class="col-12 p-3">
                             <div class="row">
                                 <div class="col-sm-5 m-3">
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="col-sm-8 p-3 ">
-                    <div class="p-3 m-3 text-bg-light border border-subtle rounded-1">
+                    <div class="p-3 m-3 my-border-color-default rounded-1">
                         <h2 class="p-3"><b>지원자 자기 소개</b></h2>
                         <hr>
                         <h5>대략적인 한줄 요약 개요</h5>
@@ -124,8 +124,24 @@
                             id est laborum consectetur adipiscing elit,
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
                             veniam, quis nostrud exercitation ullamco.</p>
+                        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing
+                            elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                            veniam, quis nostrud exercitation ullamco. Sunt in culpa qui officia deserunt mollit
+                            anim
+                            id est laborum consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                            veniam, quis nostrud exercitation ullamco.</p>
+                        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing
+                            elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                            veniam, quis nostrud exercitation ullamco. Sunt in culpa qui officia deserunt mollit
+                            anim
+                            id est laborum consectetur adipiscing elit,
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                            veniam, quis nostrud exercitation ullamco.</p>
                     </div>
-                    <div class="p-3 m-3 text-bg-light border border-subtle rounded-1">
+                    <div class="p-3 m-3 my-border-color-default rounded-1">
                         <h2 class="p-3"><b>경력 사항</b></h2>
                         <hr>
                         <h5>핵심 경력</h5>
