--- a/userDetail.html
+++ b/userDetail.html
@@ -93,6 +93,9 @@
                                 <li class="nav-item">
                                     연락처 2
                                 </li>
+                                <li class="nav-item">
+                                    연락처 3
+                                </li>
                             </ul>
                         </div>
                         <div class="col-10 m-3 p-3">
@@ -105,6 +108,9 @@
                                 <li class="nav-item">
                                     상세사항 2
                                 </li>
+                                <li class="nav-item">
+                                    상세사항 3
+                                </li>
                             </ul>
                         </div>
 
@@ -116,14 +122,7 @@
                         <h2 class="p-3"><b>지원자 자기 소개</b></h2>
                         <hr>
                         <h5>대략적인 한줄 요약 개요</h5>
-                        <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing
-                            elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                            veniam, quis nostrud exercitation ullamco. Sunt in culpa qui officia deserunt mollit
-                            anim
-                            id est laborum consectetur adipiscing elit,
-                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                            veniam, quis nostrud exercitation ullamco.</p>
+
                         <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing
                             elit,
                             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
