--- a/userDetail.html
+++ b/userDetail.html
@@ -54,7 +54,7 @@
     </nav>
     <!-- 헤더 경계선 -->
     <div class="container my-3">
-        <div class="container mt-5">
+        <div class="mt-3">
             <div class="row">
                 <div class=" col-sm-4 p-3">
                     <div class="my-border-color-default m-3 rounded-1" style="height: 100%;">
