링크 설정 및 수정 사항 확인
필요한 a 태그 링크 설정 완료
style.css 병합 완료
일반/기업 회원 로그인 페이지 분리 완료
홈 페이지 구현 완료

--- a/boardDetailForm.html
+++ b/boardDetailForm.html
@@ -12,13 +12,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
-    <link rel="stylesheet" href="/css/style2.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <div class="d-flex justify-content-center">
         <div class="text-center fs-1 my-5">
-            구인해요
+            <a href="/home.html" class="no_under_line_link">구인해요</a>
         </div>
     </div>
 
@@ -30,10 +30,10 @@
             <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
                 <ul class="navbar-nav my-nav-bar">
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">채용정보</a>
+                        <a class="nav-link" href="/boardListForm.html">채용정보</a>
                     </li>
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">인재정보</a>
+                        <a class="nav-link" href="/userList.html">인재정보</a>
                     </li>
                     <form class="d-flex">
                         <button class="btn btn-primary my-button-no-round" type="button"
@@ -42,14 +42,13 @@
                         <input class="form-control my-button-no-round text-center" type="text" placeholder="기업 검색">
                     </form>
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">로그인</a>
+                        <a class="nav-link" href="/userLoginForm.html">로그인</a>
                     </li>
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">회원가입</a>
+                        <a class="nav-link" href="/userJoinForm.html">회원가입</a>
                     </li>
                 </ul>
             </div>
-
         </div>
     </nav>
     <!-- 헤더 경계선 -->
