--- a/comapnyLoginForm.html
+++ b/comapnyLoginForm.html
@@ -18,7 +18,7 @@
 <body>
     <div class="d-flex justify-content-center">
         <div class="text-center fs-1 my-5">
-            구인해요
+            <a href="/home.html" class="no_under_line_link">구인해요</a>
         </div>
     </div>
 
@@ -30,46 +30,64 @@
             <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
                 <ul class="navbar-nav my-nav-bar">
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">채용정보</a>
+                        <a class="nav-link" href="/boardListForm.html">채용정보</a>
                     </li>
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">인재정보</a>
+                        <a class="nav-link" href="/userList.html">인재정보</a>
                     </li>
                     <form class="d-flex">
                         <button class="btn btn-primary my-button-no-round" type="button"
                             style="display : none; visibility : hidden;"><img src="/images/search.png" alt="검색"
-                                style="width: 20px; height: 23px; "></button>
+                                style="width: 20px; height: 23px;"></button>
                         <input class="form-control my-button-no-round text-center" type="text" placeholder="기업 검색">
                     </form>
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">로그인</a>
+                        <a class="nav-link" href="/userLoginForm.html">로그인</a>
                     </li>
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">회원가입</a>
+                        <a class="nav-link" href="/userJoinForm.html">회원가입</a>
                     </li>
                 </ul>
             </div>
-
         </div>
     </nav>
     <!-- 헤더 경계선 -->
-    <div class="container my-3 py-3 px-3 justify-content-center d-flex">
-        <div class="my-border-color-default px-3 py-3" style="width: 50%; ">
-            <form>
-                <div class="my-4">
-                    <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Username">
+    <div class="container my-3 py-3 px-3 ">
+        <div class="justify-content-center d-flex py-3">
+            <h2>로그인</h2>
+        </div>
+        <div class="justify-content-center d-flex">
+            <nav class="navbar navbar-expand-sm bg-light navbar-light" style="width: 50%;">
+                <div class="container-fluid">
+                    <ul class="nav nav-tabs">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/userLoginForm.html">일반회원</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">기업회원</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="my-4">
-                    <input type="password" class="form-control" placeholder="Password">
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input">
-                    <label class="form-check-label">아이디 기억하기</label>
-                </div>
-                <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-primary my-button-color-default">로그인</button>
-                </div>
-            </form>
+            </nav>
+        </div>
+        <div class="justify-content-center d-flex">
+            <div class="my-border-color-default px-3 py-3" style="width: 50%; ">
+                <form>
+                    <div class="my-4">
+                        <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Username">
+                    </div>
+                    <div class="my-4">
+                        <input type="password" class="form-control" placeholder="Password">
+                    </div>
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input">
+                        <label class="form-check-label">아이디 기억하기</label>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <button type="submit" class="btn btn-primary my-button-color-default">로그인</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
     <!-- 푸터 경계선 -->
