--- a/headerandfooter.html
+++ b/headerandfooter.html
@@ -18,7 +18,7 @@
 <body>
     <div class="d-flex justify-content-center">
         <div class="text-center fs-1 my-5">
-            구인해요
+            <a href="/home.html" class="no_under_line_link">구인해요</a>
         </div>
     </div>
 
@@ -30,10 +30,10 @@
             <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
                 <ul class="navbar-nav my-nav-bar">
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">채용정보</a>
+                        <a class="nav-link" href="/boardListForm.html">채용정보</a>
                     </li>
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">인재정보</a>
+                        <a class="nav-link" href="/userList.html">인재정보</a>
                     </li>
                     <form class="d-flex">
                         <button class="btn btn-primary my-button-no-round" type="button"
@@ -42,14 +42,13 @@
                         <input class="form-control my-button-no-round text-center" type="text" placeholder="기업 검색">
                     </form>
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">로그인</a>
+                        <a class="nav-link" href="/userLoginForm.html">로그인</a>
                     </li>
                     <li class="nav-item fs-4 text-center">
-                        <a class="nav-link" href="">회원가입</a>
+                        <a class="nav-link" href="/userJoinForm.html">회원가입</a>
                     </li>
                 </ul>
             </div>
-
         </div>
     </nav>
     <!-- 헤더 경계선 -->
