--- a/userLoginForm.html
+++ b/userLoginForm.html
@@ -21,7 +21,6 @@
             <a href="/home.html" class="no_under_line_link">구인해요</a>
         </div>
     </div>
-
     <nav class="navbar navbar-expand-sm my-bg-color-default navbar-dark">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -54,7 +53,7 @@
     <!-- 헤더 경계선 -->
     <div class="container my-3 py-3 px-3">
         <div class="justify-content-center d-flex py-3">
-            <h2>회원가입</h2>
+            <h2>로그인</h2>
         </div>
         <div class="justify-content-center d-flex">
             <nav class="navbar navbar-expand-sm bg-light navbar-light" style="width: 50%;">
@@ -64,7 +63,7 @@
                             <a class="nav-link active" aria-current="page" href="#">일반회원</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/comapnyJoinForm.html">기업회원</a>
+                            <a class="nav-link" href="/comapnyLoginForm.html">기업회원</a>
                         </li>
                     </ul>
                 </div>
@@ -73,46 +72,18 @@
         <div class="justify-content-center d-flex">
             <div class="my-border-color-default px-3 py-3" style="width: 50%; ">
                 <form>
-                    <div class="mb-3">
-                        <label class="form-label">아이디</label>
-                        <input type="text" class="form-control" placeholder="Username">
+                    <div class="my-4">
+                        <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Username">
                     </div>
-                    <div class="mb-3">
-                        <label class="form-label">비밀번호</label>
+                    <div class="my-4">
                         <input type="password" class="form-control" placeholder="Password">
                     </div>
-                    <div class="mb-3">
-                        <label class="form-label">비밀번호 확인</label>
-                        <input type="password" class="form-control" placeholder="Confirm Password">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">이메일</label>
-                        <input type="email" class="form-control" placeholder="Email">
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">이용 약관</label>
-                        <textarea class="form-control" rows="3">
-Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti ea incidunt ratione voluptates enim. Voluptatem optio suscipit neque cumque omnis amet maiores possimus, recusandae laudantium pariatur eveniet nostrum dignissimos eligendi!
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit laudantium provident laborum ipsam impedit, dolorum sit itaque sunt mollitia aspernatur, assumenda perferendis excepturi amet, corporis dicta molestias nostrum? Esse, perspiciatis! 
-                    </textarea>
-                    </div>
-                    <div class="mb-3 form-check d-flex justify-content-end">
+                    <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input">
-                        <label class="form-check-label ms-2">동의합니다</label>
-                    </div>
-                    <div class="mb-3">
-                        <label class="form-label">개인 정보 수집 및 이용 약관</label>
-                        <textarea class="form-control" rows="3">
-Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti ea incidunt ratione voluptates enim. Voluptatem optio suscipit neque cumque omnis amet maiores possimus, recusandae laudantium pariatur eveniet nostrum dignissimos eligendi!
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit laudantium provident laborum ipsam impedit, dolorum sit itaque sunt mollitia aspernatur, assumenda perferendis excepturi amet, corporis dicta molestias nostrum? Esse, perspiciatis! 
-                        </textarea>
-                    </div>
-                    <div class="mb-3 form-check d-flex justify-content-end">
-                        <input type="checkbox" class="form-check-input">
-                        <label class="form-check-label ms-2">동의합니다</label>
+                        <label class="form-check-label">아이디 기억하기</label>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-primary my-button-color-default">회원가입</button>
+                        <button type="submit" class="btn btn-primary my-button-color-default">로그인</button>
                     </div>
                 </form>
             </div>
