--- a/userList.html
+++ b/userList.html
@@ -98,7 +98,7 @@
                                           </div>
                                     </a>
                                     <div class="card-footer d-flex justify-content-between">
-                                          <div>상세보기</div>
+                                          <div>2023.01.01</div>
                                           <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i>
                                           </div>
                                     </div>
@@ -126,7 +126,7 @@
                                           </div>
                                     </a>
                                     <div class="card-footer d-flex justify-content-between">
-                                          <div>상세보기</div>
+                                          <div>2023.01.01</div>
                                           <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i>
                                           </div>
                                     </div>
@@ -153,7 +153,7 @@
                                           </div>
                                     </a>
                                     <div class="card-footer d-flex justify-content-between">
-                                          <div>상세보기</div>
+                                          <div>2023.01.01</div>
                                           <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i>
                                           </div>
                                     </div>
@@ -180,7 +180,7 @@
                                           </div>
                                     </a>
                                     <div class="card-footer d-flex justify-content-between">
-                                          <div>상세보기</div>
+                                          <div>2023.01.01</div>
                                           <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i>
                                           </div>
                                     </div>
@@ -211,7 +211,7 @@
                                           </div>
                                     </a>
                                     <div class="card-footer d-flex justify-content-between">
-                                          <div>상세보기</div>
+                                          <div>2023.01.01</div>
                                           <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i>
                                           </div>
                                     </div>
@@ -238,7 +238,7 @@
                                           </div>
                                     </a>
                                     <div class="card-footer d-flex justify-content-between">
-                                          <div>상세보기</div>
+                                          <div>2023.01.01</div>
                                           <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i>
                                           </div>
                                     </div>
@@ -265,7 +265,7 @@
                                           </div>
                                     </a>
                                     <div class="card-footer d-flex justify-content-between">
-                                          <div>상세보기</div>
+                                          <div>2023.01.01</div>
                                           <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i>
                                           </div>
                                     </div>
@@ -292,7 +292,7 @@
                                           </div>
                                     </a>
                                     <div class="card-footer d-flex justify-content-between">
-                                          <div>상세보기</div>
+                                          <div>2023.01.01</div>
                                           <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i>
                                           </div>
                                     </div>
