기업 공고 목록 페이지 수정
기업 공고 목록 페이지 카드 디비전 패딩 수정
구직자 목록 페이지 마우스 오버시 바뀌는 색상 변경

--- a/userList.html
+++ b/userList.html
@@ -286,12 +286,12 @@
       <script>
             function mouseEnterImages(e) {
                   let id = e.getAttribute('id');
-                  $("#" + id).addClass("border border-dark");
+                  $("#" + id).addClass("border border-primary");
             }
 
             function mouseLeaveImages(e) {
                   let id = e.getAttribute('id');
-                  $("#" + id).removeClass("border border-dark");
+                  $("#" + id).removeClass("border border-primary");
             }
       </script>
       <!-- 푸터 경계선 -->
