--- a/boardListForm.html
+++ b/boardListForm.html
@@ -67,31 +67,32 @@
         </div>
 
         <!-- 카드 시작 -->
+        <div class="p-3">
+            <div class="row gx-3">
 
-        <div class="row gx-3">
-
-            <div class="col-md-3 py-2">
-                <a href="/boardDetailForm.html" class="no_under_line_link">
-                    <div id="boardImage1" class="card col-lg-12" onclick="location.href='http://naver.com'"
-                        onmouseenter="mouseEnterImages(this)" onmouseleave="mouseLeaveImages(this)">
-                        <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
-                        <div class="card-body">
-                            <div class="my-text-ellipsis">
-                                <h5>(주)엘지</h5>
+                <div class="col-md-3 py-2">
+                    <a href="/boardDetailForm.html" class="no_under_line_link">
+                        <div id="boardImage1" class="card col-lg-12" onclick="location.href='http://naver.com'"
+                            onmouseenter="mouseEnterImages(this)" onmouseleave="mouseLeaveImages(this)">
+                            <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg"
+                                alt="Card image">
+                            <div class="card-body">
+                                <div class="my-text-ellipsis">
+                                    <h5>(주)엘지</h5>
+                                </div>
+                                <div class="my-text-ellipsis">
+                                    2023년 IT직 경력/신입
+                                </div>
+                                <div class="my-text-ellipsis">
+                                    채용
+                                </div>
                             </div>
-                            <div class="my-text-ellipsis">
-                                2023년 IT직 경력/신입
-                            </div>
-                            <div class="my-text-ellipsis">
-                                채용
-                            </div>
-                        </div>
-                        <div class="card-footer d-flex justify-content-between">
-                            <div>(D-1)</div>
-                            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
-                        </div>
+                    </a>
+                    <div class="card-footer d-flex justify-content-between">
+                        <div>(D-1)</div>
+                        <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
                     </div>
-                </a>
+                </div>
             </div>
 
             <div class="col-md-3 py-2">
@@ -110,160 +111,160 @@
                                 채용
                             </div>
                         </div>
-                        <div class="card-footer d-flex justify-content-between">
-                            <div>(D-1)</div>
-                            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
-                        </div>
-                    </div>
                 </a>
+                <div class="card-footer d-flex justify-content-between">
+                    <div>(D-1)</div>
+                    <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
+                </div>
             </div>
-
-            <div class="col-md-3 py-2">
-                <a href="/boardDetailForm.html" class="no_under_line_link">
-                    <div id="boardImage3" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
-                        onmouseleave="mouseLeaveImages(this)">
-                        <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
-                        <div class="card-body">
-                            <div class="my-text-ellipsis">
-                                <h5>(주)엘지</h5>
-                            </div>
-                            <div class="my-text-ellipsis">
-                                2023년 IT직 경력/신입
-                            </div>
-                            <div class="my-text-ellipsis">
-                                채용
-                            </div>
-                        </div>
-                        <div class="card-footer d-flex justify-content-between">
-                            <div>(D-1)</div>
-                            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-3 py-2">
-                <a href="/boardDetailForm.html" class="no_under_line_link">
-                    <div id="boardImage4" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
-                        onmouseleave="mouseLeaveImages(this)">
-                        <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
-                        <div class="card-body">
-                            <div class="my-text-ellipsis">
-                                <h5>(주)엘지</h5>
-                            </div>
-                            <div class="my-text-ellipsis">
-                                2023년 IT직 경력/신입
-                            </div>
-                            <div class="my-text-ellipsis">
-                                채용
-                            </div>
-                        </div>
-                        <div class="card-footer d-flex justify-content-between">
-                            <div>(D-1)</div>
-                            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-3 py-2">
-                <a href="/boardDetailForm.html" class="no_under_line_link">
-                    <div id="boardImage5" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
-                        onmouseleave="mouseLeaveImages(this)">
-                        <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
-                        <div class="card-body">
-                            <div class="my-text-ellipsis">
-                                <h5>(주)엘지</h5>
-                            </div>
-                            <div class="my-text-ellipsis">
-                                2023년 IT직 경력/신입
-                            </div>
-                            <div class="my-text-ellipsis">
-                                채용
-                            </div>
-                        </div>
-                        <div class="card-footer d-flex justify-content-between">
-                            <div>(D-1)</div>
-                            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-3 py-2">
-                <a href="/boardDetailForm.html" class="no_under_line_link">
-                    <div id="boardImage6" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
-                        onmouseleave="mouseLeaveImages(this)">
-                        <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
-                        <div class="card-body">
-                            <div class="my-text-ellipsis">
-                                <h5>(주)엘지</h5>
-                            </div>
-                            <div class="my-text-ellipsis">
-                                2023년 IT직 경력/신입
-                            </div>
-                            <div class="my-text-ellipsis">
-                                채용
-                            </div>
-                        </div>
-                        <div class="card-footer d-flex justify-content-between">
-                            <div>(D-1)</div>
-                            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-3 py-2">
-                <a href="/boardDetailForm.html" class="no_under_line_link">
-                    <div id="boardImage7" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
-                        onmouseleave="mouseLeaveImages(this)">
-                        <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
-                        <div class="card-body">
-                            <div class="my-text-ellipsis">
-                                <h5>(주)엘지</h5>
-                            </div>
-                            <div class="my-text-ellipsis">
-                                2023년 IT직 경력/신입
-                            </div>
-                            <div class="my-text-ellipsis">
-                                채용
-                            </div>
-                        </div>
-                        <div class="card-footer d-flex justify-content-between">
-                            <div>(D-1)</div>
-                            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
-            <div class="col-md-3 py-2">
-                <a href="/boardDetailForm.html" class="no_under_line_link">
-                    <div id="boardImage8" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
-                        onmouseleave="mouseLeaveImages(this)">
-                        <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
-                        <div class="card-body">
-                            <div class="my-text-ellipsis">
-                                <h5>(주)엘지</h5>
-                            </div>
-                            <div class="my-text-ellipsis">
-                                2023년 IT직 경력/신입
-                            </div>
-                            <div class="my-text-ellipsis">
-                                채용
-                            </div>
-                        </div>
-                        <div class="card-footer d-flex justify-content-between">
-                            <div>(D-1)</div>
-                            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
-                        </div>
-                    </div>
-                </a>
-            </div>
-
         </div>
 
+        <div class="col-md-3 py-2">
+            <a href="/boardDetailForm.html" class="no_under_line_link">
+                <div id="boardImage3" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
+                    onmouseleave="mouseLeaveImages(this)">
+                    <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
+                    <div class="card-body">
+                        <div class="my-text-ellipsis">
+                            <h5>(주)엘지</h5>
+                        </div>
+                        <div class="my-text-ellipsis">
+                            2023년 IT직 경력/신입
+                        </div>
+                        <div class="my-text-ellipsis">
+                            채용
+                        </div>
+                    </div>
+            </a>
+            <div class="card-footer d-flex justify-content-between">
+                <div>(D-1)</div>
+                <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-3 py-2">
+        <a href="/boardDetailForm.html" class="no_under_line_link">
+            <div id="boardImage4" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
+                onmouseleave="mouseLeaveImages(this)">
+                <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
+                <div class="card-body">
+                    <div class="my-text-ellipsis">
+                        <h5>(주)엘지</h5>
+                    </div>
+                    <div class="my-text-ellipsis">
+                        2023년 IT직 경력/신입
+                    </div>
+                    <div class="my-text-ellipsis">
+                        채용
+                    </div>
+                </div>
+        </a>
+        <div class="card-footer d-flex justify-content-between">
+            <div>(D-1)</div>
+            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
+        </div>
+    </div>
+    </div>
+
+    <div class="col-md-3 py-2">
+        <a href="/boardDetailForm.html" class="no_under_line_link">
+            <div id="boardImage5" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
+                onmouseleave="mouseLeaveImages(this)">
+                <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
+                <div class="card-body">
+                    <div class="my-text-ellipsis">
+                        <h5>(주)엘지</h5>
+                    </div>
+                    <div class="my-text-ellipsis">
+                        2023년 IT직 경력/신입
+                    </div>
+                    <div class="my-text-ellipsis">
+                        채용
+                    </div>
+                </div>
+        </a>
+        <div class="card-footer d-flex justify-content-between">
+            <div>(D-1)</div>
+            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
+        </div>
+    </div>
+    </div>
+
+    <div class="col-md-3 py-2">
+        <a href="/boardDetailForm.html" class="no_under_line_link">
+            <div id="boardImage6" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
+                onmouseleave="mouseLeaveImages(this)">
+                <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
+                <div class="card-body">
+                    <div class="my-text-ellipsis">
+                        <h5>(주)엘지</h5>
+                    </div>
+                    <div class="my-text-ellipsis">
+                        2023년 IT직 경력/신입
+                    </div>
+                    <div class="my-text-ellipsis">
+                        채용
+                    </div>
+                </div>
+        </a>
+        <div class="card-footer d-flex justify-content-between">
+            <div>(D-1)</div>
+            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
+        </div>
+    </div>
+    </div>
+
+    <div class="col-md-3 py-2">
+        <a href="/boardDetailForm.html" class="no_under_line_link">
+            <div id="boardImage7" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
+                onmouseleave="mouseLeaveImages(this)">
+                <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
+                <div class="card-body">
+                    <div class="my-text-ellipsis">
+                        <h5>(주)엘지</h5>
+                    </div>
+                    <div class="my-text-ellipsis">
+                        2023년 IT직 경력/신입
+                    </div>
+                    <div class="my-text-ellipsis">
+                        채용
+                    </div>
+                </div>
+        </a>
+        <div class="card-footer d-flex justify-content-between">
+            <div>(D-1)</div>
+            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
+        </div>
+    </div>
+    </div>
+
+    <div class="col-md-3 py-2">
+        <a href="/boardDetailForm.html" class="no_under_line_link">
+            <div id="boardImage8" class="card col-lg-12" onmouseenter="mouseEnterImages(this)"
+                onmouseleave="mouseLeaveImages(this)">
+                <img class="card-img-top" style="height: 100px;" src="/images/newjeans.jpg" alt="Card image">
+                <div class="card-body">
+                    <div class="my-text-ellipsis">
+                        <h5>(주)엘지</h5>
+                    </div>
+                    <div class="my-text-ellipsis">
+                        2023년 IT직 경력/신입
+                    </div>
+                    <div class="my-text-ellipsis">
+                        채용
+                    </div>
+                </div>
+        </a>
+        <div class="card-footer d-flex justify-content-between">
+            <div>(D-1)</div>
+            <div><i id="heart" class="fa-regular fa-heart my-xl my-cursor fa-lg"></i></div>
+        </div>
+    </div>
+    </div>
+
+    </div>
+    </div>
     </div>
 
     <!-- 페이징 -->
@@ -287,11 +288,11 @@
         function mouseEnterImages(e) {
             // console.log(e.getAttribute('id'))
             let id = e.getAttribute('id');
-            $("#" + id).addClass("border border-dark");
+            $("#" + id).addClass("border border-primary");
         }
         function mouseLeaveImages(e) {
             let id = e.getAttribute('id');
-            $("#" + id).removeClass("border border-dark");
+            $("#" + id).removeClass("border border-primary");
         }
     </script>
 
