기업 공고 등록 / 이력서 페이지 간격 조정

--- a/saveForm.html
+++ b/saveForm.html
@@ -55,7 +55,7 @@
     <!-- 헤더 경계선 -->
 
     <div class="container py-3 px-3">
-        <div class="justify-content-center d-flex py-3">
+        <div class="justify-content-center d-flex my-3 py-3">
             <h2>
                 기업 공고 등록
             </h2>
