--- a/applyForm.html
+++ b/applyForm.html
@@ -54,8 +54,8 @@
     </nav>
     <!-- 헤더 경계선 -->
 
-    <div class="container my-3 py-3 px-3">
-        <div class="justify-content-center d-flex py-3">
+    <div class="container py-3 px-3">
+        <div class="justify-content-center d-flex my-3 py-3">
             <h2>
                 이력서
             </h2>
