--- a/userDetail.html
+++ b/userDetail.html
@@ -133,6 +133,7 @@
                                         </div>
                                         <div class="col-8">
                                             이메일@이메일.이메일
+                                            <!-- 이메일이 길어질경우 후에 간격 수정가능 -->
                                         </div>
                                     </div>
                                 </li>
